# nagnishal

./: Gini impurity.ipynb  LICENSE  Predicting house price.ipynb  README.md  TITANIC datset eda and feature engineering(data.csv  TITANIC datset eda and feature engineering.ipynb  Vacuum cleaner.ipynb  browser use_AI.txt  first.txt  haunted.ipynb  homework.py  homework2.ipynb  k-mean clustering..ipynb  terry_rat.ipynb
FIFA-26 prediction/Football FIFA-26/: README.md  app.py  pyproject.toml
FIFA-26/FootballPredict-26/: README .md  README.md  api_utils.py  app.py  local_requirements.txt  pyproject.toml
LAB EXAM/: 24UG00332_35_zooExam.ipynb
